tests/rosetta/out/Go/arithmetic-evaluation.error
parse: error[P999]: tests/rosetta/x/Mochi/arithmetic-evaluation.mochi:26:29: unexpected token "(" (expected TypeRef)
  --> tests/rosetta/x/Mochi/arithmetic-evaluation.mochi:26:29

 26 | fun parseNumber(p: Parser): (int, Parser) {
    |                             ^

help:
  Parse error occurred. Check syntax near this location.